@@ -16,7 +16,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
+
 
 @Configuration
 @EnableWebSecurity
@@ -49,9 +50,17 @@ public class SecurityConfig {
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers("/api/auth/**").permitAll()
                 .requestMatchers("/admin/page").permitAll()
+                .requestMatchers("/").permitAll()  // Allow root
+                .requestMatchers("/index.html").permitAll()  // Allow HTML pages
+                .requestMatchers("/css/**").permitAll()  // Allow CSS
+                .requestMatchers("/js/**").permitAll()   // Allow JavaScript
+                .requestMatchers("/images/**").permitAll() // Allow images
+                .requestMatchers("/favicon.ico").permitAll() // Allow favicon
+                .requestMatchers("/error").permitAll()  // Allow error page
+                .requestMatchers("/actuator/health").permitAll() // Allow health check
                 .requestMatchers("/api/admin/**").hasRole("ADMIN")
                 .requestMatchers("/api/client/**").hasAnyRole("CLIENT", "ADMIN")
-                .anyRequest().permitAll()
+                .anyRequest().permitAll()  // Allow all other requests for now
             )
             .addFilterBefore(jwtAuthenticationFilter(), 
                 UsernamePasswordAuthenticationFilter.class);
@@ -62,17 +71,44 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", 
-                                                "http://127.0.0.1:5500",
-                                                "http://localhost:8080"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", 
-                                                "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(List.of("Authorization", 
-                                                "Content-Type", 
-                                                "Accept",
-                                                "X-Requested-With"));
-        configuration.setExposedHeaders(List.of("Authorization"));
+        
+        // Allow all origins for now - replace with specific URLs in production
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://localhost:3000", 
+            "http://127.0.0.1:5500",
+            "http://localhost:8080",
+            "https://chicadish.onrender.com",     // Your Render URL
+            "http://chicadish.onrender.com",      // HTTP version
+            "https://*.onrender.com",             // All Render subdomains
+            "http://*.onrender.com"               // All Render HTTP subdomains
+        ));
+        
+        // Allow all common methods
+        configuration.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
+        ));
+        
+        // Allow all headers
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization", 
+            "Content-Type", 
+            "Accept",
+            "X-Requested-With",
+            "Origin",
+            "Access-Control-Request-Method",
+            "Access-Control-Request-Headers"
+        ));
+        
+        // Expose headers to frontend
+        configuration.setExposedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Disposition"
+        ));
+        
+        // Allow credentials (cookies, authorization headers)
         configuration.setAllowCredentials(true);
+        
+        // Cache preflight response for 1 hour
         configuration.setMaxAge(3600L);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
